--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-.app {
+/* .app {
   background: #209cee;
   padding: 30px;
   height: 100vh;
-}
+} */
 
-.todo-list {
+/* .todo-list {
   background: #e8e8e8;
   border-radius: 4px;
   padding: 5px;
   max-width: 400px;
-}
+} */
 
-.todo {
+/* .todo {
   background: #fff;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   padding: 3px 10px;
@@ -21,4 +21,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+} */
+.header-color {
+  background: #E6DADA;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #274046, #E6DADA);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #274046, #E6DADA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.background-page {
+  background: url(./images/bmw2.jpg) center / cover;
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
