--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap');
+body{
+  font-family: 'Roboto', sans-serif;
+}
 .app {
-  background: #209cee;
+  background:url(./BMW-MY21-M4-Coupe-Gallery-01.jpg);
   padding: 30px;
   height: 100vh;
 }
-
+.checklist-btn{
+  text-transform: uppercase;
+    padding: 0 5px 0 5px;
+    width: 210px;
+    height: 40px;
+    border: 2px solid #11e011;
+    font-size: 20px;
+    font-weight: 500;
+    font-style: normal;
+    border-radius: 5px;
+    line-height: 19px;
+}
 .todo-list {
   background: #e8e8e8;
   border-radius: 4px;
   padding: 5px;
-  max-width: 400px;
+  max-width: 600px;
 }
 
 .todo {
   background: #fff;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   padding: 3px 10px;
-  font-size: 12px;
+  font-weight: 400;
+  font-size: 14px;
   margin-bottom: 6px;
   border-radius: 3px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.todo-input{
+  height: 25px;
+  width: 300px;
 }
